--- a/prj_1stysheet.css
+++ b/prj_1stysheet.css
@@ -20,152 +20,166 @@ padding-left: 300px;
 padding-left: 300px;
 }
 
+.container  {
+    position: relative;
+    width: 100%;
+}
+.container img {
+    width: 100%;
+    height: auto;
+}
+img .lvl2 {
+    width: 80%;
+    height: 70%;
+}
+
+.container .btn1 {
+    position: absolute;
+    width: 6%;
+    height: 16%;
+    top: 72%;
+    left: 45%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    background-color: transparent;
+    color: transparent;
+    text-align: center;
+
+}
+
+    .container .btn2 {
+        position: absolute;
+        width: 4%;
+        height: 24%;
+        top: 42%;
+        left: 82%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn3 {
+        position: absolute;
+        width: 3%;
+        height: 55%;
+        top: 48%;
+        left: 98.5%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn4 {
+        position: absolute;
+        width: 3%;
+        height: 12%;
+        top: 33%;
+        left: 2%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn5 {
+        position: absolute;
+        width: 3%;
+        height: 5%;
+        top: 72%;
+        left: 68.5%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn6 {
+        position: absolute;
+        width: 5%;
+        height: 10%;
+        top: 74%;
+        left: 48.5%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn7 {
+        position: absolute;
+        width: 3%;
+        height: 6%;
+        top: 34%;
+        left: 55%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn8 {
+        position: absolute;
+        width: 5%;
+        height: 5%;
+        top: 31%;
+        left: 32.5%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn9 {
+        position: absolute;
+        width: 4%;
+        height: 5%;
+        top: 19%;
+        left: 73%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn10 {
+        position: absolute;
+        width: 2.5%;
+        height: 3%;
+        top: 61%;
+        left: 32%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn11 {
+        position: absolute;
+        width: 11%;
+        height: 11%;
+        top: 87.5%;
+        left: 33%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
+    .container .btn12 {
+        position: absolute;
+        width: 6%;
+        height: 4%;
+        top: 92%;
+        left: 78%;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        background-color: transparent;
+        color: transparent;
+    }
 .leftsidepadding {
 padding-left: 200px;
 }
 
-.float{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:730px;
-	right:720px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float2{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:650px;
-	right:1180px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
+.HomeButton {
+    background-color: #808080;
+    width: 5%;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-width: 1px;
+    text-align: center;
+    padding-bottom: 5px;
 }
 
-.float3{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:420px;
-	right:1200px;
-	background-color:transparent;
-	color:transparent;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float4{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:220px;
-	right:1175px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float5{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:190px;
-	right:620px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float6{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:290px;
-	right:990px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float7{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:310px;
-	right:730px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float8{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:610px;
-	right:900px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float9{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:610px;
-	right:1560px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float10{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:370px;
-	right:1040px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float11{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:500px;
-	right:500px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
-.float12{
-	position:fixed;
-	width:40px;
-	height:40px;
-	bottom:500px;
-	right:280px;
-	background-color:#0C9;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
-}
