homepage fix + added home.jpg

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(https://img.freepik.com/free-vector/suburban-cottage-residential-house-with-garage_107791-1034.jpg?w=2000) no-repeat center center fixed;
+    background: url("home.jpg") no-repeat center center fixed;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
