StyleSheet update on a Button
The button was not transparent, but has been remedied and fixed.

--- a/prj_1stysheet.css
+++ b/prj_1stysheet.css
@@ -172,8 +172,8 @@ img .lvl2 {
         left: 78%;
         transform: translate(-50%,-50%);
         -ms-transform: translate(-50%,-50%);
-        background-color: blue;
-        color: blue;
+        background-color: transparent;
+        color: transparent;
 		z-index:2;
 		border: none;
     }
